--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "28-Stu_Mini-Project",
+  "name": "NOSql",
   "version": "1.0.1",
-  "description": "Mongoose back-end project - Main",
+  "description": "NOSql",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "seed": "node utils/seed",
-    "heroku-postbuild": "node utils/seed.js"
+    "seed": "node utils/seed"
   },
   "dependencies": {
     "express": "^4.17.1",
